# migrate-owui-rag

./: .gitignore  README.md  docker-compose.milvus.yml  docker-compose.qdrant.yml  migrate_chroma.py  migrate_chroma_to_milvus.py  pyproject.toml  requirements.txt
tests/: conftest.py  mock_embedding_server.py  test_e2e_migration.py  test_ingest_and_migrate.py
