[project]
name = "migrate-owui-rag"
version = "0.1.0"
description = "Offline migration of an Open WebUI ChromaDB vector store to a Milvus server"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Core runtime deps for the migration script + tests. The full, proven set
    # lives in requirements.txt (installed via `uv pip install -r requirements.txt`).
    "pymilvus==2.6.14",
    "chromadb==1.5.9",
    "langchain-core",
    "langchain-text-splitters",
    "pytest",
    "qdrant-client",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
